//go:generate protoc --proto_path=../../../ --go_out=../../../ --go_opt=paths=source_relative core/services/eastatusreporter/ea_status.proto
syntax = "proto3";

option go_package = "github.com/smartcontractkit/chainlink/v2/core/services/eastatusreporter/events";

package ea_status.v1;

// EAStatusEvent represents the status data from an External Adapter
message EAStatusEvent {
  // Bridge and adapter identification
  string bridge_name = 1;
  string adapter_name = 2;
  string adapter_version = 3;
  int64 adapter_uptime_seconds = 4;
  string default_endpoint = 5;
  
  // Runtime information
  RuntimeInfo runtime = 6;
  
  // Metrics configuration
  MetricsInfo metrics = 7;
  
  // Available endpoints as structured data  
  repeated EndpointInfo endpoints = 8;
  
  // Configuration including values as requested
  repeated ConfigurationItem configuration = 9;
  
  // Event metadata
  string timestamp = 10;
}

message RuntimeInfo {
  string node_version = 1;
  string platform = 2;
  string architecture = 3;
  string hostname = 4;
}

message MetricsInfo {
  bool enabled = 1;
}

message EndpointInfo {
  string name = 1;
  repeated string aliases = 2;
  repeated string transports = 3;
}

message ConfigurationItem {
  string name = 1;
  string value = 2;
  string type = 3;
  string description = 4;
  bool required = 5;
  string default_value = 6;
  bool custom_setting = 7;
  string env_default_override = 8;
} 